log
Thu 21 Mar 2024 12:12:54 AM UTC: 
 tests:  0|5
total_score: 0/70
690cdd0
Thu 21 Mar 2024 02:10:47 AM UTC: 
 exercises.c | 24 ++++++++++++++++++------
 1 file changed, 18 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: ‘suma’ undeclared (first use in this function)
   64 |    return suma;
      |           ^~~~
exercises.c:64:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
825bb5a
Thu 21 Mar 2024 02:11:01 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2dbe656
